added basic API server and unit tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,14 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.120.4",
     "flask>=3.1.2",
-    "openapi>=2.0.0",
+    "openai>=2.8.0",
     "python-dotenv>=1.2.1",
     "uvicorn>=0.38.0",
 ]
 
 [dependency-groups]
 dev = [
+    "httpx>=0.28.1",
     "pytest>=8.4.2",
     "pytest-cov>=7.0.0",
     "pytest-mock>=3.15.1",
