--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "flask>=3.1.2",
     "openai>=2.8.0",
     "python-dotenv>=1.2.1",
+    "sqlmodel>=0.0.27",
     "uvicorn>=0.38.0",
 ]
 
