--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,10 @@ dependencies = [
     "flask>=3.1.2",
     "openai>=2.8.0",
     "python-dotenv>=1.2.1",
+    "rapidfuzz>=3.14.3",
+    "requests>=2.32.5",
     "sqlmodel>=0.0.27",
+    "tenacity>=9.1.2",
     "uvicorn>=0.38.0",
 ]
 
